Fix overflow style rules in Basic modal component
The containing element should now handle overflow correctly by enabling scrolling in an axis when the modal's size exceeds its own in that axis (before, it was only handling y-axis overflow).

--- a/packages/frontend/src/components/modals/components/Basic/index.module.css
+++ b/packages/frontend/src/components/modals/components/Basic/index.module.css
@@ -21,10 +21,8 @@
     top: 0;
     left: 0;
 
-    overflow-y: auto;
+    overflow-x: auto;
 
-    min-width: 0;
-    min-height: min-content;
     width: 100%;
     height: 100%;
 
@@ -36,7 +34,8 @@
     justify-content: center;
     align-items: center;
 
-    width: 100%;
+    width: min-content;
+    min-width: 100%;
     height: min-content;
     min-height: 100%;
 }
@@ -54,7 +53,8 @@
 
     min-width: 0;
     min-height: 0;
-    height: max-content; /* Maximum height */
+    width: max-content;
+    height: max-content;
     padding: 0.4rem;
 
     animation: modalTranslate 0.4s ease-out forwards;
